verilog_langserver/verilog_parser/antlr_build/SystemVerilogParser.py
# Generated from SystemVerilog.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class SystemVerilogParser ( Parser ):

    grammarFileName = "SystemVerilog.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'module'", "'endmodule'", "'interface'", 
                     "'endinterface'", "'program'", "'endprogram'", "'package'", 
                     "'endpackage'", "'config'", "'endconfig'", "'virtual'", 
                     "'class'", "'endclass'", "'task'", "'endtask'", "'function'", 
                     "'endfunction'", "'#('", "'void'", "'$root'", "<INVALID>", 
                     "<INVALID>", "' '", "'\t'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                     "';'", "':'", "','", "'='", "'?'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "SINGLELINE_COMMENT", "MULTILINE_COMMENT", 
                      "SPACE", "TAB", "NEWLINE", "String", "COMPILER_DIRECTIVE", 
                      "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", 
                      "OpenBrace", "CloseBrace", "SemiColon", "Colon", "Comma", 
                      "Assign", "QuestionMark", "Dot", "Operators", "Number", 
                      "IntegralNumber", "RealNumber", "UnsignedNumber", 
                      "DecimalNumber", "BinaryNumber", "OctalNumber", "HexNumber", 
                      "UNBASED_UNSIZED_LITERAL", "Time", "Word" ]

    RULE_source = 0
    RULE_declaration = 1
    RULE_module_declaration = 2
    RULE_interface_declaration = 3
    RULE_program_declaration = 4
    RULE_package_declaration = 5
    RULE_config_declaration = 6
    RULE_class_declaration = 7
    RULE_package_item = 8
    RULE_task_declaration = 9
    RULE_function_declaration = 10
    RULE_parameter_port_list = 11
    RULE_port_list = 12
    RULE_return_val = 13
    RULE_identifier = 14
    RULE_label = 15
    RULE_hierarchical_identifier = 16
    RULE_constant_bit_select = 17

    ruleNames =  [ "source", "declaration", "module_declaration", "interface_declaration", 
                   "program_declaration", "package_declaration", "config_declaration", 
                   "class_declaration", "package_item", "task_declaration", 
                   "function_declaration", "parameter_port_list", "port_list", 
                   "return_val", "identifier", "label", "hierarchical_identifier", 
                   "constant_bit_select" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    SINGLELINE_COMMENT=21
    MULTILINE_COMMENT=22
    SPACE=23
    TAB=24
    NEWLINE=25
    String=26
    COMPILER_DIRECTIVE=27
    OpenBracket=28
    CloseBracket=29
    OpenParen=30
    CloseParen=31
    OpenBrace=32
    CloseBrace=33
    SemiColon=34
    Colon=35
    Comma=36
    Assign=37
    QuestionMark=38
    Dot=39
    Operators=40
    Number=41
    IntegralNumber=42
    RealNumber=43
    UnsignedNumber=44
    DecimalNumber=45
    BinaryNumber=46
    OctalNumber=47
    HexNumber=48
    UNBASED_UNSIZED_LITERAL=49
    Time=50
    Word=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SystemVerilogParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SystemVerilogParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SystemVerilogParser.DeclarationContext,i)


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_source

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSource" ):
                listener.enterSource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSource" ):
                listener.exitSource(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource" ):
                return visitor.visitSource(self)
            else:
                return visitor.visitChildren(self)




    def source(self):

        localctx = SystemVerilogParser.SourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_source)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SystemVerilogParser.T__0) | (1 << SystemVerilogParser.T__2) | (1 << SystemVerilogParser.T__4) | (1 << SystemVerilogParser.T__6) | (1 << SystemVerilogParser.T__8) | (1 << SystemVerilogParser.T__10) | (1 << SystemVerilogParser.T__11) | (1 << SystemVerilogParser.T__13) | (1 << SystemVerilogParser.T__15))) != 0):
                self.state = 36
                self.declaration()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(SystemVerilogParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module_declaration(self):
            return self.getTypedRuleContext(SystemVerilogParser.Module_declarationContext,0)


        def interface_declaration(self):
            return self.getTypedRuleContext(SystemVerilogParser.Interface_declarationContext,0)


        def program_declaration(self):
            return self.getTypedRuleContext(SystemVerilogParser.Program_declarationContext,0)


        def package_declaration(self):
            return self.getTypedRuleContext(SystemVerilogParser.Package_declarationContext,0)


        def package_item(self):
            return self.getTypedRuleContext(SystemVerilogParser.Package_itemContext,0)


        def config_declaration(self):
            return self.getTypedRuleContext(SystemVerilogParser.Config_declarationContext,0)


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = SystemVerilogParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SystemVerilogParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.module_declaration()
                pass
            elif token in [SystemVerilogParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.interface_declaration()
                pass
            elif token in [SystemVerilogParser.T__4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.program_declaration()
                pass
            elif token in [SystemVerilogParser.T__6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.package_declaration()
                pass
            elif token in [SystemVerilogParser.T__10, SystemVerilogParser.T__11, SystemVerilogParser.T__13, SystemVerilogParser.T__15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.package_item()
                pass
            elif token in [SystemVerilogParser.T__8]:
                self.enterOuterAlt(localctx, 6)
                self.state = 49
                self.config_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(SystemVerilogParser.IdentifierContext,0)


        def parameter_port_list(self):
            return self.getTypedRuleContext(SystemVerilogParser.Parameter_port_listContext,0)


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_module_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_declaration" ):
                listener.enterModule_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_declaration" ):
                listener.exitModule_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_declaration" ):
                return visitor.visitModule_declaration(self)
            else:
                return visitor.visitChildren(self)




    def module_declaration(self):

        localctx = SystemVerilogParser.Module_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(SystemVerilogParser.T__0)
            self.state = 53
            self.identifier()
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 54
                self.parameter_port_list()


            self.state = 60
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 57
                    self.matchWildcard() 
                self.state = 62
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 63
            self.match(SystemVerilogParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(SystemVerilogParser.IdentifierContext,0)


        def parameter_port_list(self):
            return self.getTypedRuleContext(SystemVerilogParser.Parameter_port_listContext,0)


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_interface_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterface_declaration" ):
                listener.enterInterface_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterface_declaration" ):
                listener.exitInterface_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_declaration" ):
                return visitor.visitInterface_declaration(self)
            else:
                return visitor.visitChildren(self)




    def interface_declaration(self):

        localctx = SystemVerilogParser.Interface_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_interface_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(SystemVerilogParser.T__2)
            self.state = 66
            self.identifier()
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 67
                self.parameter_port_list()


            self.state = 73
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 70
                    self.matchWildcard() 
                self.state = 75
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 76
            self.match(SystemVerilogParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_program_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram_declaration" ):
                listener.enterProgram_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram_declaration" ):
                listener.exitProgram_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_declaration" ):
                return visitor.visitProgram_declaration(self)
            else:
                return visitor.visitChildren(self)




    def program_declaration(self):

        localctx = SystemVerilogParser.Program_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_program_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(SystemVerilogParser.T__4)
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 79
                    self.matchWildcard() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 85
            self.match(SystemVerilogParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def package_item(self):
            return self.getTypedRuleContext(SystemVerilogParser.Package_itemContext,0)


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_package_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage_declaration" ):
                listener.enterPackage_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage_declaration" ):
                listener.exitPackage_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_declaration" ):
                return visitor.visitPackage_declaration(self)
            else:
                return visitor.visitChildren(self)




    def package_declaration(self):

        localctx = SystemVerilogParser.Package_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_package_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(SystemVerilogParser.T__6)
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 88
                self.package_item()
                pass

            elif la_ == 2:
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 89
                        self.matchWildcard() 
                    self.state = 94
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass


            self.state = 97
            self.match(SystemVerilogParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_config_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig_declaration" ):
                listener.enterConfig_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig_declaration" ):
                listener.exitConfig_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig_declaration" ):
                return visitor.visitConfig_declaration(self)
            else:
                return visitor.visitChildren(self)




    def config_declaration(self):

        localctx = SystemVerilogParser.Config_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_config_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(SystemVerilogParser.T__8)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 100
                    self.matchWildcard() 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 106
            self.match(SystemVerilogParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(SystemVerilogParser.IdentifierContext,0)


        def label(self):
            return self.getTypedRuleContext(SystemVerilogParser.LabelContext,0)


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_class_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declaration" ):
                listener.enterClass_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declaration" ):
                listener.exitClass_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = SystemVerilogParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SystemVerilogParser.T__10:
                self.state = 108
                self.match(SystemVerilogParser.T__10)


            self.state = 111
            self.match(SystemVerilogParser.T__11)
            self.state = 112
            self.identifier()
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 113
                    self.matchWildcard() 
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 119
            self.match(SystemVerilogParser.T__12)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SystemVerilogParser.Colon:
                self.state = 120
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def task_declaration(self):
            return self.getTypedRuleContext(SystemVerilogParser.Task_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(SystemVerilogParser.Function_declarationContext,0)


        def class_declaration(self):
            return self.getTypedRuleContext(SystemVerilogParser.Class_declarationContext,0)


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_package_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage_item" ):
                listener.enterPackage_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage_item" ):
                listener.exitPackage_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_item" ):
                return visitor.visitPackage_item(self)
            else:
                return visitor.visitChildren(self)




    def package_item(self):

        localctx = SystemVerilogParser.Package_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_package_item)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SystemVerilogParser.T__13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.task_declaration()
                pass
            elif token in [SystemVerilogParser.T__15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.function_declaration()
                pass
            elif token in [SystemVerilogParser.T__10, SystemVerilogParser.T__11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.class_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Task_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(SystemVerilogParser.IdentifierContext,0)


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_task_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTask_declaration" ):
                listener.enterTask_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTask_declaration" ):
                listener.exitTask_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTask_declaration" ):
                return visitor.visitTask_declaration(self)
            else:
                return visitor.visitChildren(self)




    def task_declaration(self):

        localctx = SystemVerilogParser.Task_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_task_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(SystemVerilogParser.T__13)
            self.state = 129
            self.identifier()
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 130
                    self.matchWildcard() 
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

            self.state = 136
            self.match(SystemVerilogParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_val(self):
            return self.getTypedRuleContext(SystemVerilogParser.Return_valContext,0)


        def identifier(self):
            return self.getTypedRuleContext(SystemVerilogParser.IdentifierContext,0)


        def OpenParen(self):
            return self.getToken(SystemVerilogParser.OpenParen, 0)

        def getRuleIndex(self):
            return SystemVerilogParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = SystemVerilogParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(SystemVerilogParser.T__15)
            self.state = 139
            self.return_val()
            self.state = 140
            self.identifier()
            self.state = 141
            self.match(SystemVerilogParser.OpenParen)
            self.state = 145
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 142
                    self.matchWildcard() 
                self.state = 147
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

            self.state = 148
            self.match(SystemVerilogParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_port_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CloseParen(self):
            return self.getToken(SystemVerilogParser.CloseParen, 0)

        def getRuleIndex(self):
            return SystemVerilogParser.RULE_parameter_port_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_port_list" ):
                listener.enterParameter_port_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_port_list" ):
                listener.exitParameter_port_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_port_list" ):
                return visitor.visitParameter_port_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_port_list(self):

        localctx = SystemVerilogParser.Parameter_port_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameter_port_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(SystemVerilogParser.T__17)
            self.state = 154
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 151
                    self.matchWildcard() 
                self.state = 156
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

            self.state = 157
            self.match(SystemVerilogParser.CloseParen)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OpenParen(self):
            return self.getToken(SystemVerilogParser.OpenParen, 0)

        def CloseParen(self):
            return self.getToken(SystemVerilogParser.CloseParen, 0)

        def getRuleIndex(self):
            return SystemVerilogParser.RULE_port_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort_list" ):
                listener.enterPort_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort_list" ):
                listener.exitPort_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPort_list" ):
                return visitor.visitPort_list(self)
            else:
                return visitor.visitChildren(self)




    def port_list(self):

        localctx = SystemVerilogParser.Port_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_port_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(SystemVerilogParser.OpenParen)
            self.state = 163
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 160
                    self.matchWildcard() 
                self.state = 165
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

            self.state = 166
            self.match(SystemVerilogParser.CloseParen)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_valContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SystemVerilogParser.RULE_return_val

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_val" ):
                listener.enterReturn_val(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_val" ):
                listener.exitReturn_val(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_val" ):
                return visitor.visitReturn_val(self)
            else:
                return visitor.visitChildren(self)




    def return_val(self):

        localctx = SystemVerilogParser.Return_valContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_return_val)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.match(SystemVerilogParser.T__18)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 169
                        self.matchWildcard() 
                    self.state = 174
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
